# graylog-tui

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: take_screenshots.py
src/graylog_tui/: cli.py  client.py  config.py  formatter.py
src/graylog_tui/modes/: plain.py  tail.py
src/graylog_tui/tui/: app.py  app_logs.py  dashboard.tcss  logs_only.tcss  widgets.py
tests/: test_cli.py  test_client.py  test_config.py  test_formatter.py  test_plain_mode.py
