[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graylog-tui"
version = "1.0.0"
description = "Graylog terminal dashboard — full-screen TUI and plain-text tail"
authors = [
    { name = "Peter Adam", email = "2871413+p3dda@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "readchar>=4.0",
    "rich>=13.0",
    "textual>=0.80,<1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.4",
    "types-pyyaml",
]

[project.scripts]
graylog-tui = "graylog_tui.cli:entry"

[tool.hatch.build.targets.wheel]
packages = ["src/graylog_tui"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
